project/logs/20251010_122947.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,profike:vs_6_0

Object3d.VS.hlsl:8:64: error: invalid register specification, expected 't' binding
StructuredBuffer<TransformationMatrix> gTransformationMatrix : register(b0);
                                                               ^
Object3d.VS.hlsl:23:65: error: no member named 'WVP' in 'StructuredBuffer<TransformationMatrix>'
    output.position = mul(input.position, gTransformationMatrix.WVP);
                                          ~~~~~~~~~~~~~~~~~~~~~ ^
Object3d.VS.hlsl:25:86: error: no member named 'World' in 'StructuredBuffer<TransformationMatrix>'
    output.normal = normalize(mul(input.normal, (float32_t3x3) gTransformationMatrix.World));
                                                               ~~~~~~~~~~~~~~~~~~~~~ ^

